# eu-funding-signal

./: .env.example  .gitignore  404.html  README.md  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  docker-compose.yml  firebase.json  index.html  index.txt
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
admin/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.admin.__PAGE__.txt  index.html  index.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260404_0001_initial_schema.py
backend/src/eu_funding_signal/: cli.py  main.py
backend/src/eu_funding_signal/connectors/: base.py  cordis.py  fts.py  funding_tenders.py  programme_dashboards.py
backend/src/eu_funding_signal/core/: demo_loader.py  settings.py
backend/src/eu_funding_signal/db/: models.py  session.py
backend/src/eu_funding_signal/jobs/: scheduler.py
backend/src/eu_funding_signal/repositories/: demo_repository.py
backend/src/eu_funding_signal/schemas/: api.py
backend/src/eu_funding_signal/services/: engine.py
backend/src/eu_funding_signal_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_scenario.py  test_validation.py
docs/: PRODUCTION_DEPLOYMENT.md
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
organisation/: __next._full.txt  __next._index.txt  (+5 more)
(+278 files in other folders)
