[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-funding-signal-backend"
version = "0.1.0"
description = "FastAPI backend for EU Funding Signal."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.4",
  "apscheduler==3.11.2",
  "beautifulsoup4==4.14.3",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "networkx==3.6.1",
  "openpyxl==3.1.5",
  "orjson==3.11.8",
  "pandas==3.0.2",
  "pgvector==0.4.2",
  "psycopg[binary]==3.3.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "python-multipart==0.0.22",
  "rapidfuzz==3.14.3",
  "sqlalchemy==2.0.49",
  "typer==0.24.1",
  "uvicorn==0.43.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.9"
]
ml = [
  "sentence-transformers==5.3.0"
]

[project.scripts]
eu-funding-signal = "eu_funding_signal.cli:app"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

